Fix the password overflow and lack of scrollability on moibile

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -31,3 +31,9 @@ $primary: $blue
     
 pre code 
     margin-bottom: 1em
+
+.modal-card
+    overflow: auto
+
+input
+    min-width: 0
